Fix for word-break in IE11

--- a/src/@koop-components/page-components/columns-map/_columns-map.scss
+++ b/src/@koop-components/page-components/columns-map/_columns-map.scss
@@ -67,7 +67,7 @@ $gutter: 1em;
 
           th,
           td {
-            word-break: break-word;
+            word-break: break-all;
           }
         }
 
